# AnotherLovelyTZ

./: .gitmodules  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: CPUChecker.h  Client.h
Client/src/: CPUChecker.c  Client.c  main.c
Protocol/: CMakeLists.txt
Protocol/include/: Protocol.h
Server/: CMakeLists.txt
Server/include/: CPUGraph.hpp  MainWindow.hpp  Server.hpp
Server/src/: CPUGraph.cpp  MainWindow.cpp  Server.cpp  main.cpp
